如何使用布尔类型

--- a/source/_posts/【编程技巧】如何正确的使用布尔类型.md
+++ b/source/_posts/【编程技巧】如何正确的使用布尔类型.md
@@ -371,7 +371,7 @@ public class PojoTest {
 
 ![png7](【编程技巧】如何正确的使用布尔类型/png7.png)
 
-&ensp;&ensp;&ensp;&ensp;这里建议我们使用包装类型，理由是包装类型在数据属性为空的时候会默认赋值为null，而基本数据类型在属性为空的时候则会赋值为false或者诸如在double中的0，这在生产环境下很有可能会产生一些微妙的异常情况。
+&ensp;&ensp;&ensp;&ensp;这里建议我们使用包装类型，理由是包装类型在数据属性为空的时候会默认赋值为null，而基本数据类型在属性为空的时候则会赋值为false或者为0。比如常见的Double和double，Integer和int，对于null和0的不同，这在生产环境下很有可能会产生一些灾难性的异常情况。
 
 &ensp;&ensp;&ensp;&ensp;个人觉得，无论是null还是默认的false与0也好，从本质上讲无非是我们如何在代码中正确的对异常情况进行处理。毕竟代码中出现没有意义的null也未必见得就是一件好事。
 
